# fastapi-eccomerce-next-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: deploy.yml
app/: main.py
app/api/: api.py  auth.py  cart.py  category.py  dependencies.py  order.py  payment.py  product.py  report.py  review.py  users.py
app/core/: config.py  exceptions.py  security.py
app/db/: session.py
app/models/: __init__.py  cart.py  category.py  notification.py  order.py  order_item.py  payment.py  product.py  reset_code.py  review.py  user.py
app/schemas/: cart.py  category.py  notification.py  order.py  payment.py  product.py  response.py  review.py  user.py
app/services/: cart.py  category.py  email.py  google_auth.py  order.py  payment.py  product.py  report.py  review.py  upload.py  user.py
app/templates/: delivery_person_order_notification.html  order-status.html  order_confirmation.html  payment-failed.html  payment-success.html  reset-password.html  welcome.html
migrations/: env.py  script.py.mako
migrations/versions/: a430e66dcdaa_initilized_models_tables.py
