[project]
name = "shopease"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosmtplib>=5.1.2",
    "alembic",
    "asyncmy>=0.2.11",
    "asyncpg>=0.31.0",
    "authlib>=1.7.2",
    "boto3>=1.43.34",
    "email-validator>=2.3.0",
    "fastapi>=0.138.0",
    "greenlet>=3.5.2",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.32",
    "sqlmodel>=0.0.38",
    "stripe>=15.2.1",
    "uvicorn>=0.49.0",
]
